--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -10,15 +10,15 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     post = "/:year/:month/:day/:slug/"
 
 [[menu.main]]
-    name = "About"
-    url = "/About/"
-[[menu.main]]
     name = "CV"
-    url = "/CV/"
+    url = "/CV/CV.pdf"
+[[menu.main]]
+    name = "Slides"
+    url = "/Slides/PresentationNinja.html"
 
 [params]
     description = "A website built through Hugo and blogdown."
-	showPoweredBy = false
+	  showPoweredBy = false
     copyrightHolder = "John Doe"
 
     # options for highlight.js (version, additional languages, and theme)
@@ -31,7 +31,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     MathJaxVersion = "2.7.1"
 
     [params.logo]
-    url = "logo.png"
+    url = "/images/logo.png"
     width = 320
     height = 137
     alt = "Logo"
